# Self-Hosted-LLM-Platform-using-FastAPI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  chat_interface.py  direct_chat.py  docker-compose.yml  fix_ollama.py  pyproject.toml  quick_start.py  requirements.txt  run.py  run_llm.py  start_everything.ps1  start_server.py  test_api.ps1  test_fix_new.py  test_ollama.ps1  test_ollama.py  test_simple.py
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_migration.py
docs/: deployment.md
grafana/provisioning/dashboards/: llm_dashboard.json
prometheus/: alert_rules.yml  prometheus.yml
scripts/: deploy.sh  fix_all.py  fix_env.py  health_check.sh  quick_test.py  setup_database.ps1  setup_database.py  setup_database.sh  setup_database_simple.ps1
src/: main.py  main_simple.py
src/api/: deps.py  middleware.py
src/api/routes/: admin.py  chat.py  finetune.py  models.py  monitoring.py
src/config/: bkp_settings copy.py  settings.py  settings_fixed.py  settings_simple.py
src/core/: security.py
src/database/: crud.py  models.py  session.py
src/monitoring/: prometheus.py
src/services/: cache_service.py  finetune_service.py  llm_service.py  load_balancer.py
src/utils/: conversation_manager.py  file_utils.py
tests/: test_api.py
